plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'com.modrinth.minotaur' version '2.+'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = System.getenv("MOD_VERSION") ?: mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-forge"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

mixin {
    add sourceSets.main, "ic2.refmap.json"
    config "ic2.mixins.json"
}

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }
        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }
        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }
    }
}

repositories {
    mavenCentral()
    maven { url = "https://maven.blamejared.com/" }
    maven { url "https://api.modrinth.com/maven" }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    compileOnly "mezz.jei:jei-1.20.1-forge-api:${jei_version}"
    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
    
    compileOnly fg.deobf("maven.modrinth:ae2:7KVs6HMQ")
    // compileOnly "org.appliedenergistics:appliedenergistics2:${ae2_version}:api"
}

reobf {
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
}

modrinth {
    token = System.getenv("MODRINTH_TOKEN")
    projectId = modrinth_project_id
    versionNumber = mod_version
    versionName = "${mod_name} ${mod_version}"
    versionType = mod_version.contains("-release") ? "release" : "beta"
    uploadFile = tasks.jar.archiveFile
    gameVersions = [minecraft_version]
    loaders = ["forge"]
    changelog = project.file('release.md').exists() ? project.file('release.md').text : ""
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('syncVersion') {
    doLast {
        def version = mod_version
        def badgeVersion = version.replace('-', '--')

        def readmeFile = file('README.md')
        def readmeContent = readmeFile.text
        readmeContent = readmeContent.replaceAll(
            /(Version-)[^"<\s]+(-blue)/,
            "\$1${badgeVersion}\$2"
        )
        readmeContent = readmeContent.replaceAll(
            /alt="Version [^"]+"/,
            "alt=\"Version ${version}\""
        )
        readmeFile.text = readmeContent
        
        def readmeEnFile = file("README_EN.md")
        def readmeEnContent = readmeEnFile.text
        readmeEnContent = readmeEnContent.replaceAll(
                /(Version-)[^"<\s]+(-blue)/,
                "\$1${badgeVersion}\$2"
        )
        readmeEnContent = readmeEnContent.replaceAll(
                /alt="Version [^"]+"/,
                "alt=\"Version ${version}\""
        )
        readmeEnFile.text = readmeEnContent

        def releaseFile = file('release.md')
        def releaseContent = releaseFile.text
        releaseContent = releaseContent.replaceAll(/^# .+/, "# ${version}")
        releaseFile.text = releaseContent

        logger.error("Notice: current version is: ${version}")
    }
}

// ========== Release workflow tasks ==========

tasks.register('checkTag') {
    group = 'publishing'
    description = 'Check if the version tag already exists locally or remotely. Fails if it does.'
    doLast {
        def version = mod_version

        // Check local tag
        def localResult = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'tag', '-l', version
            standardOutput = localResult
        }
        if (localResult.toString().trim() == version) {
            throw new GradleException(
                "Tag '${version}' already exists locally!\n" +
                "Delete it with: git tag -d ${version}\n" +
                "Or bump the mod_version in gradle.properties."
            )
        }

        // Check remote tag
        def remoteResult = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'ls-remote', '--tags', 'origin', "refs/tags/${version}"
            standardOutput = remoteResult
            ignoreExitValue = true
        }
        if (!remoteResult.toString().trim().isEmpty()) {
            throw new GradleException(
                "Tag '${version}' already exists on remote!\n" +
                "Delete it with: git push origin --delete ${version}\n" +
                "Or bump the mod_version in gradle.properties."
            )
        }

        logger.lifecycle("Tag '${version}' is available (not found locally or remotely).")
    }
}

tasks.register('tagRelease') {
    group = 'publishing'
    description = 'Create and push git tag for the current version.'
    dependsOn 'checkTag'
    doLast {
        def version = mod_version
        exec {
            commandLine 'git', 'tag', version
        }
        logger.lifecycle("Created tag '${version}' on HEAD.")
        exec {
            commandLine 'git', 'push', 'origin', version
        }
        logger.lifecycle("Pushed tag '${version}' to origin.")
    }
}

tasks.register('githubRelease') {
    group = 'publishing'
    description = 'Create GitHub Release via gh CLI and upload the built jar.'
    dependsOn 'build', 'tagRelease'
    doLast {
        def version = mod_version
        def jarFile = tasks.jar.archiveFile.get().asFile
        def releaseNotes = file('release.md')

        if (!jarFile.exists()) {
            throw new GradleException(
                "Jar file not found: ${jarFile.absolutePath}\n" +
                "Has the build step succeeded?"
            )
        }

        // Check if gh CLI is available
        boolean ghAvailable = false
        try {
            def result = exec {
                commandLine 'gh', '--version'
                standardOutput = new ByteArrayOutputStream()
                errorOutput = new ByteArrayOutputStream()
                ignoreExitValue = true
            }
            ghAvailable = (result.exitValue == 0)
        } catch (Exception ignored) {
            // gh not found in PATH
        }
        if (!ghAvailable) {
            throw new GradleException(
                "GitHub CLI (gh) is not installed or not in PATH.\n" +
                "Install it from: https://cli.github.com/\n" +
                "Or run: winget install GitHub.cli\n" +
                "Then authenticate: gh auth login"
            )
        }

        def args = [
            'gh', 'release', 'create', version,
            jarFile.absolutePath,
            '--title', "${mod_name} ${version}",
            '--notes-file', releaseNotes.absolutePath
        ]
        if (!version.contains('-release')) {
            args << '--prerelease'
        }

        exec {
            commandLine args
        }
        logger.lifecycle("Created GitHub Release '${version}' with jar: ${jarFile.name}")
    }
}

tasks.register('publishRelease') {
    group = 'publishing'
    description = 'Full release workflow: build, tag, GitHub Release, and Modrinth publish.'
    dependsOn 'githubRelease', 'modrinth'
}

// Enforce task ordering
tasks.named('githubRelease') { mustRunAfter 'tagRelease' }
tasks.named('modrinth') { mustRunAfter 'githubRelease' }
